tests/cases/device_definition_errors/diagnostics.kdl.txt
  error: Unexpected node
   ╭─[cases/device_definition_errors/input.kdl:1:1]
 1 │ a 1
   · ┬
   · ╰── The unexpected node
 2 │ 
   ╰────
  help: Expected a node with one of these names: `device`

  error: Missing object name
   ╭─[cases/device_definition_errors/input.kdl:3:1]
 2 │ 
 3 │ device {
   · ───┬──
   ·    ╰── For this object
 4 │ 
   ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `device Foo { }`

  error: Missing object name
   ╭─[cases/device_definition_errors/input.kdl:7:1]
 6 │ 
 7 │ device 1 {
   · ───┬── ┬
   ·    │   ╰── Found this entry instead which is not a valid name
   ·    ╰── For this object
 8 │ 
   ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `device Foo { }`

  warning: Empty node
    ╭─[cases/device_definition_errors/input.kdl:11:1]
 10 │     
 11 │ ╭─▶ device Foo {
 12 │ │   
 13 │ ├─▶ }
    · ╰──── The empty node
 14 │     
    ╰────
  help: This type of node should have children to specify what it contains

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:15:12]
 14 │ 
 15 │ device Foo abc def {
    ·            ─┬─ ─┬─
    ·             │   ╰── This entry is unexpected
    ·             ╰── This entry is unexpected
 16 │ 
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  warning: Empty node
    ╭─[cases/device_definition_errors/input.kdl:15:1]
 14 │     
 15 │ ╭─▶ device Foo abc def {
 16 │ │   
 17 │ ├─▶ }
    · ╰──── The empty node
 18 │     
    ╰────
  help: This type of node should have children to specify what it contains

  error: Unexpected node
    ╭─[cases/device_definition_errors/input.kdl:20:5]
 19 │ device Foo {
 20 │     blah 123
    ·     ──┬─
    ·       ╰── The unexpected node
 21 │ }
    ╰────
  help: Expected a node with one of these names: `default-register-access`, `default-field-access`, `default-buffer-
        access`, `default-byte-order`, `default-bit-order`, `register-address-type`, `command-address-type`, `buffer-
        address-type`, `name-word-boundaries`, `defmt-feature`, `block`, `register`, `command`, `buffer`, `ref`

  error: Duplicate node
    ╭─[cases/device_definition_errors/input.kdl:25:5]
 23 │ device Foo {
 24 │     default-register-access RW
    ·     ─────────────┬────────────
    ·                  ╰── The original node
 25 │     default-register-access RO
    ·     ─────────────┬────────────
    ·                  ╰── The duplicate node
 26 │ }
    ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:29:29]
 28 │ device Foo {
 29 │     default-register-access Blah
    ·                             ──┬─
    ·                               ╰── Unexpected value: expected one of these values: `RW`, `RO`, `WO`
 30 │     default-buffer-access
    ╰────

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:30:5]
 29 │     default-register-access Blah
 30 │     default-buffer-access
    ·     ──────────┬──────────
    ·               ╰── For this node
 31 │     default-field-access RW RO WO
    ╰────
  help: This node should have one or more of these entries: `RW`, `RO`, `WO`

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:31:29]
 30 │     default-buffer-access
 31 │     default-field-access RW RO WO
    ·                             ─┬ ─┬
    ·                              │  ╰── This entry is unexpected
    ·                              ╰── This entry is unexpected
 32 │ }
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:35:29]
 34 │ device Foo {
 35 │     default-register-access value=RW
    ·                             ────┬───
    ·                                 ╰── This entry was expected to be anonymous
 36 │     register-address-type u8
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:35:5]
 34 │ device Foo {
 35 │     default-register-access value=RW
    ·     ───────────┬───────────
    ·                ╰── For this node
 36 │     register-address-type u8
    ╰────
  help: This node should have one or more of these entries: `RW`, `RO`, `WO`

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:37:26]
 36 │     register-address-type u8
 37 │     command-address-type 16
    ·                          ─┬
    ·                           ╰── Unexpected type: expected a string
 38 │     default-bit-order msb0
    ╰────

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:38:23]
 37 │     command-address-type 16
 38 │     default-bit-order msb0
    ·                       ──┬─
    ·                         ╰── Unexpected value: expected one of these values: `LSB0`, `MSB0`
 39 │     defmt-feature lol
    ╰────

  error: Unexpected node
    ╭─[cases/device_definition_errors/input.kdl:46:5]
 45 │ 
 46 │     registah
    ·     ────┬───
    ·         ╰── The unexpected node
 47 │     register
    ╰────
  help: Expected a node with one of these names: `default-register-access`, `default-field-access`, `default-buffer-
        access`, `default-byte-order`, `default-bit-order`, `register-address-type`, `command-address-type`, `buffer-
        address-type`, `name-word-boundaries`, `defmt-feature`, `block`, `register`, `command`, `buffer`, `ref`

  error: Missing object name
    ╭─[cases/device_definition_errors/input.kdl:47:5]
 46 │     registah
 47 │     register
    ·     ────┬───
    ·         ╰── For this object
 48 │     register foo {
    ╰────
  help: The name is specified by the first entry of the node. It must be an anonymous string, e.g. `register Foo { }`

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:48:14]
 47 │     register
 48 │     register foo {
    ·              ─┬─
    ·               ╰── This register is missing the required `address` node
 49 │         
    ╰────
  help: Check the book to see all required nodes

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:48:14]
 47 │     register
 48 │     register foo {
    ·              ─┬─
    ·               ╰── This register is missing the required `fields` node
 49 │         
    ╰────
  help: Check the book to see all required nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:52:9]
 51 │     register foo {
 52 │         address
    ·         ───┬───
    ·            ╰── For this node
 53 │         address a
    ╰────
  help: This node should have one or more of these entries: `integer`

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:53:17]
 52 │         address
 53 │         address a
    ·                 ┬
    ·                 ╰── Unexpected type: expected a integer
 54 │         address 1
    ╰────

  error: Duplicate node
    ╭─[cases/device_definition_errors/input.kdl:55:9]
 53 │         address a
 54 │         address 1
    ·         ───┬───
    ·            ╰── The original node
 55 │         address 2
    ·         ───┬───
    ·            ╰── The duplicate node
 56 │         repeat
    ╰────
  help: This type of node can only appear once. Try removing one of the nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:56:9]
 55 │         address 2
 56 │         repeat
    ·         ───┬──
    ·            ╰── For this node
 57 │         reset-value 0x2000_0000
    ╰────
  help: This node should have one or more of these entries: `count=<integer>`, `stride=<integer>`

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:51:14]
 50 │     }
 51 │     register foo {
    ·              ─┬─
    ·               ╰── This register is missing the required `fields` node
 52 │         address
    ╰────
  help: Check the book to see all required nodes

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:61:16]
 60 │         address -1
 61 │         repeat count=18_446_744_073_709_551_616 stride=1
    ·                ────────────────┬───────────────
    ·                                ╰── Value is out of the allowable range: 0..2^64
 62 │         allow-address-overlap #true
    ╰────
  help: The count is encoded as a u64

  error: Unexpected entries
    ╭─[cases/device_definition_errors/input.kdl:62:31]
 61 │         repeat count=18_446_744_073_709_551_616 stride=1
 62 │         allow-address-overlap #true
    ·                               ──┬──
    ·                                 ╰── This entry is unexpected
 63 │         reset-value 0x100 0x00
    ╰────
  help: Some entries require a name, require to be anonymous or are expected to be of a certain type. Check the book
        to see the specification
        These entries may also just be superfluous. Try removing them or check other errors to see what's expected

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:63:21]
 62 │         allow-address-overlap #true
 63 │         reset-value 0x100 0x00
    ·                     ──┬──
    ·                       ╰── Value is out of the allowable range: 0..256
 64 │     }
    ╰────
  help: When specifying the reset values as an array, all numbers must be bytes

  error: Missing child node
    ╭─[cases/device_definition_errors/input.kdl:59:14]
 58 │     }
 59 │     register foo {
    ·              ─┬─
    ·               ╰── This register is missing the required `fields` node
 60 │         address -1
    ╰────
  help: Check the book to see all required nodes

  error: Missing entry
    ╭─[cases/device_definition_errors/input.kdl:67:9]
 66 │         address 0
 67 │         fields {
    ·         ───┬──
    ·            ╰── For this node
 68 │ 
    ╰────
  help: This node should have one or more of these entries: `size-bits`

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:73:16]
 72 │         address 1
 73 │         fields size-bits=-1 {
    ·                ──────┬─────
    ·                      ╰── Value is out of the allowable range: 0..2^32
 74 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:79:55]
 78 │         address 2
 79 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                        ───────┬────── ──────┬──────
    ·                                               │             ╰── The duplicate entry
    ·                                               ╰── The original entry
 80 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:79:83]
 78 │         address 2
 79 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                     ──────┬────── ───────┬──────
    ·                                                                           │              ╰── The duplicate entry
    ·                                                                           ╰── The original entry
 80 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Duplicate entry
    ╭─[cases/device_definition_errors/input.kdl:79:116]
 78 │         address 2
 79 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                                                  ────────┬──────── ────────────┬───────────
    ·                                                                                                          │                     ╰── The duplicate entry
    ·                                                                                                          ╰── The original entry
 80 │ 
    ╰────
  help: This type of entry can only appear once. Try removing one of the entries

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:79:16]
 78 │         address 2
 79 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                ───────────┬───────────
    ·                           ╰── Value is out of the allowable range: 0..2^32
 80 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:79:40]
 78 │         address 2
 79 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                        ───────┬──────
    ·                                               ╰── Unexpected value: expected one of these values: `LSB0`, `MSB0`
 80 │ 
    ╰────

  error: Unexpected value
    ╭─[cases/device_definition_errors/input.kdl:79:69]
 78 │         address 2
 79 │         fields size-bits=0x1_0000_0000 byte-order=BLA byte-order=BE bit-order=gkd bit-order=msb0 allow-bit-overlap allow-bit-overlap=#false {
    ·                                                                     ──────┬──────
    ·                                                                           ╰── Unexpected value: expected one of these values: `LE`, `BE`
 80 │ 
    ╰────

  error: Value out of range
    ╭─[cases/device_definition_errors/input.kdl:85:16]
 84 │         address 3
 85 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                ───────────┬───────────
    ·                           ╰── Value is out of the allowable range: 0..2^32
 86 │ 
    ╰────
  help: size-bits is encoded as a u32

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:85:40]
 84 │         address 3
 85 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                                        ──────┬─────
    ·                                              ╰── Unexpected type: expected a string
 86 │ 
    ╰────

  error: Unexpected type
    ╭─[cases/device_definition_errors/input.kdl:85:53]
 84 │         address 3
 85 │         fields size-bits=0x1_0000_0000 byte-order=1 bit-order=#true allow-bit-overlap  {
    ·                                                     ───────┬───────
    ·                                                            ╰── Unexpected type: expected a string
 86 │ 
    ╰────

